--- a/Skell.cabal
+++ b/Skell.cabal
@@ -32,6 +32,7 @@ executable Skell
         Utility
         GuildInfo
         UserInfo
+        RoleInfo
         Help
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
