--- a/Skell.cabal
+++ b/Skell.cabal
@@ -27,9 +27,10 @@ executable Skell
 
     -- Modules included in this executable, other than Main.
     other-modules: 
+        Utility
+        Permissions
         Cmds.Ping
         Cmds.Clear
-        Utility
         Cmds.GuildInfo
         Cmds.UserInfo
         Cmds.RoleInfo
